RESOLVED FIXED67353
REGRESSION (r94259): Two tests doing hit testing were broken by this change.
https://bugs.webkit.org/show_bug.cgi?id=67353
Summary REGRESSION (r94259): Two tests doing hit testing were broken by this change.
David Levin
Reported 2011-08-31 20:23:17 PDT
Here are the tests: fast/events/document-elementFromPoint.html fast/events/offsetX-offsetY.html The results should say PASS but now they have several FAIL lines in them.
Attachments
Patch (1.83 KB, patch)
2011-09-01 11:32 PDT, Simon Fraser (smfr)
cmarrin: review+
Simon Fraser (smfr)
Comment 1 2011-08-31 21:45:24 PDT
Crap, I saw those before I checked in and then forgot to look into them.
Simon Fraser (smfr)
Comment 2 2011-09-01 11:32:29 PDT
Simon Fraser (smfr)
Comment 3 2011-09-01 11:48:43 PDT
Note You need to log in before you can comment on or make changes to this bug.