REGRESSION (r94259): Two tests doing hit testing were broken by this change. https://bugs.webkit.org/show_bug.cgi?id=67353

Reviewed by Chris Marrin.

Fix a regression from r94259; that change missed a fix in RenderView,
which affects coordinate transforms in position:fixed elements.

This fixes these tests:
    fast/events/document-elementFromPoint.html
    fast/events/offsetX-offsetY.html
    plugins/mouse-events-fixedpos.html

* rendering/RenderView.cpp:
(WebCore::RenderView::mapAbsoluteToLocalPoint):

Canonical link: https://commits.webkit.org/83233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94324 268f45cc-cd09-0410-ab3c-d52691b4dbfc